<?xml version="1.0"?>
<package format="2">
  <name>free_local_planner_v1</name>
  <version>1.0.0</version>
  <description>The free_local_planner_v1 package</description>

  <maintainer email="lopez.alexander@pucp.edu.pe">Alexander Lopez</maintainer>
  <author email="lopez.alexander@pucp.edu.pe">Alexander Lopez</author> 

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
    <nav_core plugin="${prefix}/free_local_planner_v1_plugin.xml" />
  </export>
  
</package>
